[gd_scene load_steps=10 format=3 uid="uid://kq7e5hnob4sb"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_yi7f2"]
[ext_resource type="PackedScene" uid="uid://fr8r0cd88r2f" path="res://Scenes/mob.tscn" id="2_qxaje"]
[ext_resource type="PackedScene" uid="uid://hr0wacce7bxf" path="res://Scenes/player.tscn" id="3_fydhs"]
[ext_resource type="PackedScene" uid="uid://bvesemaacbhw6" path="res://Scenes/hud.tscn" id="4_plqnx"]
[ext_resource type="AudioStream" uid="uid://dqppgpfgxodjv" path="res://assets/art/House In a Forest Loop.ogg" id="5_sct26"]

[sub_resource type="Gradient" id="Gradient_f6a2p"]
offsets = PackedFloat32Array(0, 0.0246914, 0.45679, 0.987654, 1)
colors = PackedColorArray(0, 0, 0, 0.607843, 0, 0, 0, 1, 0.556648, 0.556648, 0.556648, 0.542627, 0.0862745, 0.0862745, 0.0862745, 0, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_rpkfl"]
gradient = SubResource("Gradient_f6a2p")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5vj13"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
color_ramp = SubResource("GradientTexture1D_rpkfl")

[sub_resource type="Curve2D" id="Curve2D_yn0va"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_yi7f2")
mob_scene = ExtResource("2_qxaje")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -8.0
offset_right = 488.0
offset_bottom = 736.0
color = Color(0.333333, 0.788235, 0.670588, 1)

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="Player" parent="." instance=ExtResource("3_fydhs")]

[node name="Trail" type="GPUParticles2D" parent="Player"]
amount = 10
process_material = SubResource("ParticleProcessMaterial_5vj13")
speed_scale = 2.0
explosiveness = 0.5
randomness = 0.39

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_yn0va")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource("4_plqnx")]

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_sct26")

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
